# sandstone

./: CMakeLists.txt  README.md
quarry/: CMakeLists.txt
quarry/src/: quarry_app.cpp
sandstone/: CMakeLists.txt
sandstone/src/sandstone/: CMakeLists.txt  sandstone.hpp
sandstone/src/sandstone/core/: CMakeLists.txt  application.cpp  application.hpp  entry_point.hpp  log.cpp  log.hpp  logger.hpp
